Add pause/resume for sources
